syntax = "proto3";

option csharp_namespace = "UserProto";

package user;

message Empty {}

message User{
    string id = 1;
    string fullname = 2;
    string email = 3;
    string username = 4;
    bool isActive = 5;
    string birthdate = 6;
    string address = 7;
    string phone = 8;
    string createdAt = 9;
}

message CreateUserRequest{
    string name = 1;
    string lastnames = 2;
    string email = 3;
    string username = 4;
    string birthdate = 5;
    string address = 6;
    string phone = 7;
    string password = 8;
}

message CreateUserResponse{
    string message = 1;
}

message GetUserRequest{
    optional string namefilter = 1;
    optional string emailfilter = 2;
    optional string isactivefilter = 3;
    optional string usernamefilter = 4;
}

message GetUserResponse{
    repeated User users = 1;
}

message GetUserIdRequest{
    string id = 1;
}
message GetUserIdResponse{
    User user = 1;
}

message UpdateUserRequest{
    string id = 1;
    string name = 2;
    string lastnames = 3;
    string email = 4;
    string username = 5;
    string birthdate = 6;
    string address = 7;
    string phone = 8;
    optional string password = 9;
}

message UpdateUserResponse{
    string message = 1;
}

message DeleteUserRequest{
    string id = 1;
}

message DeleteUserResponse{
    string message = 1;
}

message LoginRequest{
    string email_or_username = 1;
    string password = 2;

}
message LoginResponse{
    string id = 1;
    string role = 2;
}

service UserService{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetUserById(GetUserIdRequest) returns (GetUserIdResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc LoginUser(LoginRequest) returns (LoginResponse);
}